--- a/requirements.txt
+++ b/requirements.txt
@@ -1,20 +1,66 @@
-torch
-adam-atan2
-einops
-tqdm
-coolname
-pydantic
-argdantic
-wandb
-omegaconf
-hydra-core
-huggingface_hub
-packaging 
-ninja 
-wheel 
-setuptools 
-setuptools-scm
-pydantic-core
-huggingface_hub 
-numba
-triton
+adam-atan2-pytorch==0.2.4
+adam_atan2==0.0.3
+annotated-types==0.7.0
+antlr4-python3-runtime==4.9.3
+anyio==4.11.0
+argdantic==1.3.3
+certifi==2025.10.5
+charset-normalizer==3.4.4
+click==8.3.0
+coolname==2.2.0
+einops==0.8.1
+filelock==3.20.0
+fsspec==2025.10.0
+gitdb==4.0.12
+GitPython==3.1.45
+h11==0.16.0
+hf-xet==1.2.0
+httpcore==1.0.9
+httpx==0.28.1
+huggingface-hub==1.0.1
+hydra-core==1.3.2
+idna==3.11
+Jinja2==3.1.6
+jsonpatch==1.33
+jsonpointer==3.0.0
+llvmlite==0.45.1
+MarkupSafe==3.0.3
+mpmath==1.3.0
+networkx==3.5
+ninja==1.13.0
+numba==0.62.1
+numpy==2.3.4
+omegaconf==2.3.0
+packaging==25.0
+pillow==12.0.0
+platformdirs==4.5.0
+protobuf==6.33.0
+pydantic==2.12.3
+pydantic-settings==2.11.0
+pydantic_core==2.41.4
+python-dotenv==1.2.1
+PyYAML==6.0.3
+requests==2.32.5
+scipy==1.16.3
+sentry-sdk==2.43.0
+setuptools==80.9.0
+setuptools-scm==9.2.2
+shellingham==1.5.4
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+sympy==1.14.0
+torch==2.9.0
+torchaudio==2.9.0
+torchvision==0.24.0
+tornado==6.5.3
+tqdm==4.67.1
+triton==3.5.0
+typer-slim==0.20.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+urllib3==2.5.0
+visdom==0.2.4
+wandb==0.22.3
+websocket-client==1.9.0
+wheel==0.45.1
